fix gap

--- a/css/style.css
+++ b/css/style.css
@@ -1337,7 +1337,7 @@ ul li + li {
 }
 .wallet-wrap {
   display: grid;
-  grid-template-columns: 1.25fr 1fr;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   column-gap: 3rem;
 }
